--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
-.container{ margin: 83px 163px}
-.box1{ float: left; margin-right: 16px; background-color: #F8F8F8; width: 536px;}
-.box2{float: left; background-color: #F8F8F8; width: 536px;}
-.smalltitle1 { font-size: 14px; color: #5863F8; margin-bottom: 8px; text-transform: uppercase;}
-.maintitle{font-size: 42px; font-weight: 800; width: 600px; margin-bottom: 42px; text-transform: uppercase;}
-.smalltitle { font-size: 14px; color: #5863F8; text-transform: uppercase;}
-.bigtitle{ font-size: 18px; font-weight: 400; text-transform: uppercase;}
-.paragraf{font-size: 14px; color: #B1B1B1;width: 350px; text-transform: capitalize;}
-.image{float: left; margin-right: 16px;}
-.text{float: left;}
+/* section 1 */
+
+.container{ margin: 83px 163px} 
+
+ .box1{ float: left; margin-right: 16px; background-color: #F8F8F8; width: 536px; background-color: #F8F8F8; margin-bottom: 23px; margin-right: 16px;} 
+.box2{float: left; background-color: #F8F8F8; width: 536px; background-color: #F8F8F8;}
+.clear{clear: both;}
+.box3{ float: left; margin-right: 16px; background-color: #F8F8F8; width: 536px; background-color: #F8F8F8;} 
+.box4{float: left; background-color: #F8F8F8; width: 536px; background-color: #F8F8F8;}
+.smalltitle-a{margin-bottom: 8px; color: #5863F8; font-size: 14px; font-weight: bold; text-transform: uppercase;}
+.maintitle{margin-bottom: 42px; font-size: 42px; font-weight: 1000; text-transform: uppercase; width: 619px;}
+.image1{float: left;}
+.text{float: left; width: 260px; margin-left: 16px; margin-top: 35px;}
+.smalltitle1{font-size: 14px; color: #5863F8; font-weight: bold; text-transform: uppercase;}
+.bigtitle1{font-size: 18px; font-weight: 700; text-transform: capitalize; margin-top: 8px; margin-bottom: 8px;}
+.paragraf1{font-size: 14px; color: #B1B1B1; font-weight: 700; width: 220px; text-transform: capitalize;}
+
+/* section 2 */
+.container2{margin-top: 90px; margin-left: 163px; margin-bottom: 110px;}
+.box2a{float: left; width: 352px; margin-right: 16px; margin-bottom: 39px; background-color: #F8F8F8;}
+.box2b{float: left; width: 352px; margin-right: 16px; margin-bottom: 39px; background-color: #F8F8F8}
+.box2c{float: left; width: 352px; margin-right:  16px; margin-bottom: 39px; background-color: #F8F8F8}
+.smalltitle-a2{font-size: 14px; color: #5863F8; margin-bottom: 9px; font-weight: 800; text-transform: uppercase;}
+.maintitle2{font-size: 42px; font-weight: 900; width: 560px; margin-bottom: 50px; text-transform: uppercase;}
+.smalltitle2{font-size: 14px; color: #5863F8; font-weight: 800; margin:23px 125px 5px 125px; text-transform: uppercase; width: 120px;}
+.smalltitle2a{font-size: 14px; color: #5863F8; font-weight: 800;; text-transform: uppercase; margin-left: 100px ; margin-top: 23px; margin-bottom: 5px;}
+.bigtitle2{font-size: 18; font-weight: 800; width: 250px; text-transform: capitalize; margin-left: 80px; margin-right: 63px;}
+.paragraf2{ font-size: 14; color: #B1B1B1; font-weight: 900; text-transform: capitalize; margin: 10px 60px 23px 60px; width: 300px;}
